# MDMP

./: CMakeLists.txt  LICENSE  README.md  mkdocs.yml
docs/: building-and-compilation.md  declarative.md  getting-started.md  imperative.md  index.md  performance.md  runtime.md  tuning.md
examples/: CMakeLists.txt  example_usage.cpp  graph_mdmp.cpp  graph_mdmp_regcom.cpp  graph_mpi.cpp  grid_halo_mdmp.cpp  grid_halo_mdmp_regcom.cpp  grid_halo_mpi.cpp  heat_2d_mdmp.cpp  heat_2d_mdmp_regcom.cpp  heat_2d_mpi.cpp  heat_mdmp.c  heat_mdmp_regcom.c  heat_mpi.c  nbody_mdmp.cpp  nbody_mdmp_regcom.cpp  nbody_mpi.cpp  satisfy_mdmp.cpp  satisfy_mdmp_regcom.cpp  satisfy_mpi.cpp  spmv_common.h  spmv_mdmp.cpp  spmv_mdmp_regcom.cpp  spmv_mpi.cpp  stencil_mdmp.cpp  stencil_mdmp_regcom.cpp  stencil_mpi.cpp  stencil_mpi_opt.cpp  wave_mdmp.cpp  wave_mdmp_regcom.cpp  wave_mpi.cpp  wavefront_mdmp.cpp  wavefront_mdmp_regcom.cpp  wavefront_mpi.cpp
harness/: mdmpc  mdmpc++  mdmpfortran
src/: CMakeLists.txt  mdmp_compiler_pass.cpp  mdmp_compiler_pass.h  mdmp_interface.f90  mdmp_interface.h  mdmp_managed_pass.cpp  mdmp_pragma_interace.h  mdmp_pragma_interface.h  mdmp_pragma_pass.cpp  mdmp_pragma_pass.h  mdmp_runtime.cpp  mdmp_runtime.h
tests/: CMakeLists.txt  test_gather_mdmp.cpp  test_gather_mdmp_regcom.cpp  test_mdmp.cpp  test_mdmp.f90  test_mdmp_abort.cpp  test_mdmp_allgather.cpp  test_mdmp_allgather_regcom.cpp  test_mdmp_allreduce.cpp  test_mdmp_allreduce_max.cpp  test_mdmp_allreduce_max_regcom.cpp  test_mdmp_allreduce_min.cpp  test_mdmp_allreduce_min_regcom.cpp  test_mdmp_allreduce_mpi_sum.cpp  test_mdmp_allreduce_regcom.cpp  test_mdmp_bcast.cpp  test_mdmp_bcast_race.cpp  test_mdmp_bcast_race_global_struct.cpp  test_mdmp_bcast_regcom.cpp  test_mdmp_deadlock.cpp  test_mdmp_deadlock_lto.cpp  test_mdmp_deadlock_lto_procedures.cpp  test_mdmp_deadlock_noinline.cpp  test_mdmp_gather.cpp  test_mdmp_gather_regcom.cpp  test_mdmp_interprocedural.cpp  test_mdmp_multitype.cpp  test_mdmp_readonly_send_drain.cpp  test_mdmp_regcom.cpp  test_mdmp_regcom_pack.cpp  test_out_of_bounds_rank_selection_mdmp.cpp  test_periodic_mdmp.cpp  test_periodic_mdmp_regcom.cpp  test_rank_selection_mdmp.cpp  test_rank_selection_mdmp_regcom.cpp  test_reduce_max_mdmp.cpp  test_reduce_mdmp.cpp  test_reduce_mdmp_regcom.cpp  test_reduce_min_mdmp.cpp  test_reduce_non_zero_root_mdmp.cpp  (+1 more)
